# Autonomous-Infra-Foundation

./: .replit  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  aii-platform-stack.md  phase45-architecture.md  phase6-ai.md
agent/: aii_agent.py
artifacts/api-server/src/: app.ts
attached_assets/: Pasted--FASE-1-FUNDA-O-DA-PLATAFORMA-AII-AUTONOMOUS-INFRASTRUC_1781799980689.txt  Pasted--FASE-2-DISCOVERY-ENGINE-INVENT-RIO-INTELIGENTE-E-CMDB-_1781802487216.txt  Pasted--FASE-3-MONITORAMENTO-AVAN-ADO-OBSERVABILIDADE-ALERTAS-_1781805157256.txt  Pasted--FASE-4-AGENT-AII-ENDPOINT-MANAGEMENT-INVENT-RIO-DE-SOF_1781815337568.txt  Pasted--FASE-4-AGENT-AII-ENDPOINT-MANAGEMENT-INVENT-RIO-DE-SOF_1781815981925.txt  Pasted--FASE-5-ITSM-ENTERPRISE-SERVICE-DESK-WORKFLOW-ENGINE-E-_1781815394362.txt  Pasted--FASE-6-AI-COPILOT-AIOPS-RAG-CORPORATIVO-E-CENTRO-DE-OP_1781816227932.txt  Pasted--FASE-COMPLEMENTAR-INTEGRATION-HUB-ENTERPRISE-PAPEL-DO-_1781819829097.txt  Pasted--M-DULO-DE-INTEGRA-O-ENTERPRISE-COM-OCS-INVENTORY-NG-PA_1781819653629.txt  Pasted-Corre-o-do-Login-e-Atualiza-o-da-Identidade-Visual-Nexa_1781812247249.txt
backend/: main.py  seeds.py
backend/api/v1/: app.py  (+1 more)
frontend/: next.config.js  package-lock.json  package.json  pnpm-lock.yaml
frontend/.next/: app-build-manifest.json  prerender-manifest.json  routes-manifest.json  trace
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Layout.tsx  MfaSetupCard.tsx  Providers.tsx
frontend/lib/: utils.ts
frontend/services/: api.ts
frontend/store/: auth.ts
frontend/types/: index.ts
(+933 files in other folders)
