[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pyotp>=2.10.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
